--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@ if (num===1){//if serve para exibir ou realizar uma tarefa caso a condição sej
 }else{//else serve para exibir ou realizar uma tarefa caso a condição seja falsa
     console.log('Está errado');
 }
+------------------------------------------------------------------------------------------------------------------
+/*Laços de Repetição*/
+for(var inicio= 0;i <10; i++){
+    console.log(i);
+}
+
 
 
 </script>
