--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@ if (num===1){//if serve para exibir ou realizar uma tarefa caso a condição sej
 }
 ------------------------------------------------------------------------------------------------------------------
 /*Laços de Repetição*/
-for(var inicio= 0;i <10; i++){
+for(var inicio= 0;i <10; i++){ //Realiza uma repetição até que determinada objetivo seja atingido, no caso do código, enquanto o valor de i for menor que 10, ele irá incrementar uma unidade.
     console.log(i);
 }
-
-
+    
+ var inicio = 0
+ while(inicio < 10){
+        console.log(inicio); //mantém-se realizando o bloco de código enquanto a condição se mantiver.
+        inicio++;
+    }
 
 </script>
 </html>
