--- a/index.html
+++ b/index.html
@@ -32,15 +32,22 @@ if (num===1){//if serve para exibir ou realizar uma tarefa caso a condição sej
 }
 ------------------------------------------------------------------------------------------------------------------
 /*Laços de Repetição*/
+//Laço For
 for(var inicio= 0;i <10; i++){ //Realiza uma repetição até que determinada objetivo seja atingido, no caso do código, enquanto o valor de i for menor que 10, ele irá incrementar uma unidade.
     console.log(i);
 }
-    
+ //Laço While   
  var inicio = 0
  while(inicio < 10){
         console.log(inicio); //mantém-se realizando o bloco de código enquanto a condição se mantiver.
         inicio++;
-    }
-
+  }
+    
+ //Laço While do
+var inicio = 0;
+    do {
+        console.log(inicio); //Parecido com o laço while, com a diferença em que a condição sempre será testada depois do código executado. Sempre ao menos uma vez o código será executado.
+        inicio++;
+    }while (inicio<10);
 </script>
 </html>
